fixed layout issues

--- a/src/pages/dashboard/index.scss
+++ b/src/pages/dashboard/index.scss
@@ -1,5 +1,5 @@
 .dashboardPage {
-	height: auto !important;
+	height: 100%!important;
 	.dashboardRow {
 		display: flex;
 		height: 100%;
@@ -40,7 +40,12 @@
 			}
 		}
 		.qrCodeComponent {
-			width: 20%;
+			width: 18%;
+			height: 100vh;
+			position: fixed;
+			right: 0;
+			top: 0px;
+			bottom: 0px;
 		}
 	}
 	/**
